--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,7 @@
                 </form>
             </div>
         </section>
+        <div class="gradientBackground"></div>
 
     </main>
     <footer class="footer">
