--- a/message.html
+++ b/message.html
@@ -116,7 +116,8 @@
                 <div class="message__inner">
                     <p class="message__title">「優しく、温かく、行き届く」</p>
                     <p class="message__subtitle">思い描く未来と、その先へ</p>
-                    <p class="message__text">デザイナーのTomoです。<br>
+                    <p class="message__text">数あるページの中から<br class="spOnly">ご覧いただきありがとうございます！<br>
+                        デザイナーのTomoです。<br>
                         新しいことをする上で、<br class="spOnly">
                         不安や悩みはつきものですよね。<br>
                         あなたに寄り添い、思いを汲み取り、<br class="spOnly">
