--- a/service.html
+++ b/service.html
@@ -149,7 +149,7 @@
                             </div>
                             <p class="service__text">
                                 バナーは多くのユーザーの目に触れるため、認知度を高めるチャンスです。<br>
-                                オープンの告知や、新商品の紹介など、ターゲットのニーズにマッチする広告を作ります。
+                                オープンの告知や、新商品の紹介など、<br class="spOnly">ターゲットのニーズにマッチする広告を作ります。
                             </p>
                             <a href="./works/index.html#banner" class="btn-arrow">
                                 バナー制作の実績を見る</a>
