--- a/thanks.html
+++ b/thanks.html
@@ -120,6 +120,8 @@
                 </p>
             </div>
         </div>
+
+        <div class="gradientBackground"></div>
     </main>
 
     <footer class="footer">
