--- a/works/work-flyer_01.html
+++ b/works/work-flyer_01.html
@@ -140,7 +140,7 @@
                         <dl>
                             <dt>デザイン</dt>
                             <dd>認知を目的とするチラシのため<br>
-                                ①いつオープンするか ②どこにあるか ③どんな特徴があるのかが一目でわかるようにアイコンやあしらいを使ってデザインしました。<br>
+                                ①いつオープンするか ②どこにあるか<br class="spOnly">③どんな特徴があるのかが一目でわかるようにアイコンやあしらいを使ってデザインしました。<br>
                                 また、ブランドイメージのピンクを基調とすることで、温かく、ウェルカムな美容室であることがユーザーに伝わるように考えて作成しました。
                             </dd>
                         </dl>
