--- a/works/work-website_01.html
+++ b/works/work-website_01.html
@@ -126,7 +126,7 @@
                             </dl>
                             <dl>
                                 <dt>使用ツール</dt>
-                                <dd>Illustrator/Photoshop/Visual Studio Code/GitHub</dd>
+                                <dd>Illustrator/Photoshop/<br class="spOnly">Visual Studio Code/GitHub</dd>
                             </dl>
                             <dl>
                                 <dt>制作期間</dt>
@@ -138,7 +138,8 @@
                             </dl>
                             <dl>
                                 <dt>デザイン</dt>
-                                <dd>ロゴのピンクを基調にし、「LifestyleFit」のコンセプトに合うよう、柔らかいイメージで作成しました。予約につなげるための視線誘導や、キッズスペースやユニバーサルデザインといった差別化できる要素をわかりやすくデザインするよう心がけました。
+                                <dd>ロゴのピンクを基調にし、「LifestyleFit」の<br class="spOnly">コンセプトに合うよう、柔らかいイメージで作成しました。<br
+                                        class="spOnly">予約につなげるための視線誘導や、キッズスペースやユニバーサルデザインといった差別化できる要素をわかりやすくデザインするよう心がけました。
                                 </dd>
                             </dl>
                         </div>
