--- a/contact.html
+++ b/contact.html
@@ -139,10 +139,11 @@
                         <!-- <input type="submit" name="submit" value="送信する" id="submit">
                         <img src="images/send.png" alt="send"> -->
                     </p>
-                    <script type="text/javascript">
+                    <script>var submitted = false;</script>
+                    <!-- <script type="text/javascript">
                         // <script src="script.js">
                         var submitted = false;
-                    </script>
+                    </script> -->
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display: none"
                         onload="if(submitted)  {window.location='thanks.html';}"></iframe>
                 </form>
