--- a/thanks.html
+++ b/thanks.html
@@ -116,7 +116,7 @@
                 <p class="sns__message">
                     Instagramでは<br class="spOnly">
                     最新の情報を発信しております。<br>
-                    返信をお待ちの間にぜひチェックしてください!
+                    返信をお待ちの間に<br class="spOnly">ぜひチェックしてください!
                 </p>
             </div>
         </div>
