--- a/index.html
+++ b/index.html
@@ -694,9 +694,10 @@
         /* ----------------
         ホバーをスマホ・タブレットで無効化
         ------------------- */
+        // タッチデバイスかどうかを判定するための変数 'touch' を定義
         var touch = 'ontouchstart' in document.documentElement || navigator.maxTouchPoints > 0 || navigator.msMaxTouchPoints > 0;
 
-        if (touch) {
+        if (touch) {     // タッチデバイスの場合以下の処理を実行
             try {
                 for (var si in document.styleSheets) {
                     var styleSheet = document.styleSheets[si];
@@ -705,17 +706,14 @@
                     for (var ri = styleSheet.rules.length - 1; ri >= 0; ri--) {
                         if (!styleSheet.rules[ri].selectorText) continue;
 
-                        if (styleSheet.rules[ri].selectorText.match(':hover')) {
+                        if (styleSheet.rules[ri].selectorText.match(':hover')) { // ルールのセレクターテキストが ':hover' を含む場合、そのルールを削除
                             styleSheet.deleteRule(ri);
                         }
                     }
                 }
-            } catch (ex) { }
+            } catch (ex) { } // ルールのセレクターテキストが ':hover' を含む場合、そのルールを削除
         }
     </script>
-
-
-
     <!-- <script src="js/script.js"></script> -->
 </body>
 
