--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <main class="main">
         <div class="fv">
-            <video src="images/mainvisual_pc.mp4" autoplay muted loop></video>
+            <video src="images/mainvisual_pc.mp4" autoplay muted loop playsinline></video>
             <div class="fv__maincopy">
                 <img src="images/mv_textanimation.gif" alt="優しく、温かく、行き届く" class="lazyload">
             </div>
