--- a/works/work-banner_01.html
+++ b/works/work-banner_01.html
@@ -202,7 +202,7 @@
                         <img class="contact__img" src="../images/e-mail.png" alt="e-mail">
                     </a>
                 </p>
-                <p class="contact__text">お仕事のご依頼や、<br class="spOnly">
+                <p class="contact__text fadeUpTrigger">お仕事のご依頼や、<br class="spOnly">
                     こんなことできるかなといった疑問、<br>
                     こんなこと一緒にやらない？<br class="spOnly">
                     などのお誘いなど、何でもお気軽にどうぞ！
