--- a/works/work-website_03.html
+++ b/works/work-website_03.html
@@ -137,8 +137,10 @@
                             <dd>20代〜50代 男性</dd>
                         </dl> -->
                         <dl>
-                            <dt>デザイン<br>
-                                コーディング</dt>
+                            <dt class="multiLine">
+                                <span class="top">デザイン</span>
+                                <span class="bottom">コーディング</span>
+                            </dt>
                             <dd>「優しく、温かく、行き届く」をコンセプトに、お客様に寄り添い、人が持つ温かみを感じていただけるような温度感があるイメージで制作しました。
                                 また、親しみを持っていただけるよう、イラストやアイコンを積極的に活用し、お問い合わせのハードルを下げることを心がけました。
                             </dd>
@@ -203,7 +205,7 @@
                         <img class="contact__img" src="../images/e-mail.png" alt="e-mail">
                     </a>
                 </p>
-                <p class="contact__text">お仕事のご依頼や、<br class="spOnly">
+                <p class="contact__text fadeUpTrigger">お仕事のご依頼や、<br class="spOnly">
                     こんなことできるかなといった疑問、<br>
                     こんなこと一緒にやらない？<br class="spOnly">
                     などのお誘いなど、何でもお気軽にどうぞ！
