--- a/message.html
+++ b/message.html
@@ -215,7 +215,7 @@
                 <div class="introduction__contents">
                     <div class="introduction__img"><img src="images/lead__img.png" alt="introduction">
                     </div>
-                    <div class="introduction__textarea">
+                    <div class="introduction__textarea fadeUpTrigger">
                         <p class="title">デザイナー</p>
                         <p class="name__area">
                             <span class="name">ひらた ともか</span>
@@ -423,6 +423,7 @@
     </footer>
 
     <script>
+
         /* -------------
         アコーディオン
         ---------------- */
