--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                                 <div class="mask">
                                     <img src="images/img_works_web_hairsalon_small.png" alt="website">
                                     <p class="caption">
-                                        <span class="title">美容室のLP制作</span><br>
-                                        <span>LIFE hair design</span><br>
-                                        <span>担当:デザイン</span>
+                                        <span class="title">美容室のLP制作</span>
+                                        <span class="subtitle">LIFE hair design</span>
+                                        <span class="text">担当:デザイン</span>
                                     </p>
                                 </div>
                             </a>
@@ -176,9 +176,9 @@
                                 <div class="mask">
                                     <img src="images/img_works_banner_burger.png" alt="banner">
                                     <p class="caption">
-                                        <span class="title">ハンバーガーのバナー制作</span><br>
-                                        <span>デラックスバーガー</span><br>
-                                        <span>担当:デザイン</span>
+                                        <span class="title">ハンバーガーのバナー制作</span>
+                                        <span class="subtitle">デラックスバーガー</span>
+                                        <span class="text">担当:デザイン</span>
                                     </p>
                                 </div>
                             </a>
@@ -196,9 +196,9 @@
                                 <div class="mask">
                                     <img src="images/img_works_flyer_harisalon.png" alt="美容室のWebサイト">
                                     <p class="caption">
-                                        <span class="title">美容室の新規オープンチラシ</span><br>
-                                        <span>LIFE hair design</span><br>
-                                        <span>担当:デザイン</span>
+                                        <span class="title">美容室の新規オープンチラシ</span>
+                                        <span class="subtitle">LIFE hair design</span>
+                                        <span class="text">担当:デザイン</span>
                                     </p>
                                 </div>
                             </a>
