--- a/works/index.html
+++ b/works/index.html
@@ -117,9 +117,9 @@
                             <div class="mask">
                                 <img src="images/img_works_web_hairsalon.jpg" alt="website">
                                 <p class="caption">
-                                    <span class="title">美容室のLP制作</span><br>
-                                    <span>LIFE hair design</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">美容室のLP制作</span>
+                                    <span class="subtitle">LIFE hair design</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
@@ -131,9 +131,9 @@
                             <div class="mask">
                                 <img src="images/img_works_web_cafe.jpg" alt="website">
                                 <p class="caption">
-                                    <span class="title">カフェのLP制作</span><br>
-                                    <span>DESIGN CAFE</span><br>
-                                    <span>担当:コーディング</span>
+                                    <span class="title">カフェのLP制作</span>
+                                    <span class="subtitle">DESIGN CAFE</span>
+                                    <span class="text">担当:コーディング</span>
                                 </p>
                             </div>
                         </a>
@@ -145,9 +145,9 @@
                             <div class="mask">
                                 <img src="images/img_works_web_portfolio.jpg" alt="website">
                                 <p class="caption">
-                                    <span class="title">当サイト</span><br>
-                                    <span>TOMOデザインパートナー</span><br>
-                                    <span>担当：デザイン・コーディング</span>
+                                    <span class="title">当サイト</span>
+                                    <span class="subtitle">TOMOデザインパートナー</span>
+                                    <span class="text">担当：デザイン・コーディング</span>
                                 </p>
                             </div>
                         </a>
@@ -166,9 +166,9 @@
                             <div class="mask">
                                 <img src="images/img_works_banner_burger.png" alt="banner">
                                 <p class="caption">
-                                    <span class="title">ハンバーガーのバナー制作</span><br>
-                                    <span>デラックスバーガー</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">ハンバーガーのバナー制作</span>
+                                    <span class="subtitle">デラックスバーガー</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
@@ -179,9 +179,9 @@
                             <div class="mask">
                                 <img src="images/img_works_banner_mobile.png" alt="banner">
                                 <p class="caption">
-                                    <span class="title">スマホプランのバナー制作</span><br>
-                                    <span>デザスタモバイル</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">スマホプランのバナー制作</span>
+                                    <span class="subtitle">デザスタモバイル</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
@@ -192,9 +192,9 @@
                             <div class="mask">
                                 <img src="images/img_works_banner_skincare.png" alt="banner">
                                 <p class="caption">
-                                    <span class="title">化粧品のバナー制作</span><br>
-                                    <span>tmBeauty</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">化粧品のバナー制作</span>
+                                    <span class="subtitle">tmBeauty</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
@@ -205,9 +205,9 @@
                             <div class="mask">
                                 <img src="images/img_works_banner_swimming.png" alt="banner">
                                 <p class="caption">
-                                    <span class="title">水泳教室の体験のバナー制作</span><br>
-                                    <span>tmスイミングスクール</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">水泳教室の体験のバナー制作</span>
+                                    <span class="subtitle">tmスイミングスクール</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
@@ -225,9 +225,9 @@
                             <div class="mask">
                                 <img src="images/img_works_flyer_harisalon.png" alt="lifehairdesign">
                                 <p class="caption">
-                                    <span class="title">美容室の新規オープンチラシ</span><br>
-                                    <span>LIFE hair design</span><br>
-                                    <span>担当:デザイン</span>
+                                    <span class="title">美容室の新規オープンチラシ</span>
+                                    <span class="subtitle">LIFE hair design</span>
+                                    <span class="text">担当:デザイン</span>
                                 </p>
                             </div>
                         </a>
