--- a/thanks.html
+++ b/thanks.html
@@ -113,8 +113,7 @@
                 </a>
                 <!-- </div> -->
                 <p class="sns__message">
-                    Instagramでは<br class="spOnly">
-                    最新の情報を発信しております。<br>
+                    Instagramでは最新の情報を<br class="spOnly">発信しております。<br class="pcOnly">
                     返信をお待ちの間に<br class="spOnly">ぜひチェックしてください!
                 </p>
             </div>
@@ -206,24 +205,43 @@
             $('#header').addClass('done');
 
             // ボタンをクリックした際のアニメーションの設定
-            $(".menu_btn").click(function () { // ボタンがクリックされたら
-                $(this).toggleClass('active'); // ボタン自身に activeクラスを付与し
-                $("#header").toggleClass('panelactive'); // ヘッダーにpanelactiveクラスを付与
+            $(".menu_btn").click(function () {//ボタンがクリックされたら
+                $(this).toggleClass('active');//ボタン自身に activeクラスを付与し
+                if ($('#header').hasClass('panelactive')) {
+                    $(".header__nav").addClass('is-slideup'); //スライドアップするクラスを一時的に付与
+                    setTimeout(function () {
+                        $("#header").toggleClass('panelactive');//ヘッダーのpanelactiveクラスも除去
+                        $(".header__nav").removeClass('is-slideup'); //スライドアップするクラスを削除
+                    }, 300);
+                } else {
+                    $("#header").toggleClass('panelactive');//ヘッダーにpanelactiveクラスを付与
+                }
+
+            });
+            $(".header__nav").click(function () {//ナビゲーションのリンクがクリックされたら
+                $(".menu_btn").removeClass('active');//ボタンの activeクラスを除去し
+                $(".header__nav").addClass('is-slideup');
+                setTimeout(function () {
+                    $("#header").toggleClass('panelactive');//ヘッダーのpanelactiveクラスも除去
+                    $(".header__nav").removeClass('is-slideup');
+                }, 300);
             });
 
-            $(".header__nav").click(function () { // ナビゲーションのリンクがクリックされたら
-                $(".menu_btn").removeClass('active'); // ボタンの activeクラスを除去し
-                $("#header").removeClass('panelactive'); // ヘッダーのpanelactiveクラスも除去
+            /* ------------------------------------
+            エリア外をクリックした際、メニューを閉じる
+            --------------------------------------- */
+
+            $(document).on("click", function (event) {
+                if (!$(event.target).closest(".header__nav, .menu_btn").length && $(".menu_btn").hasClass("active")) {
+                    $(".menu_btn").removeClass("active");
+                    $(".header__nav").addClass('is-slideup');
+                    setTimeout(function () {
+                        $("#header").toggleClass('panelactive');//ヘッダーのpanelactiveクラスも除去
+                        $(".header__nav").removeClass('is-slideup');
+                    }, 300);
+                }
             });
         });
-
-        $(document).on("click", function (event) {
-            if (!$(event.target).closest(".header__nav, .menu_btn").length && $(".menu_btn").hasClass("active")) {
-                $(".menu_btn").removeClass("active");
-                $("#header").removeClass("panelactive");
-            }
-        });
-
 
         /* --------------
         フェードイン
