--- a/works/work-banner_02.html
+++ b/works/work-banner_02.html
@@ -140,7 +140,7 @@
                         <dl>
                             <dt>デザイン</dt>
                             <dd>配色やあしらいで春の季節感を感じられるように。
-                                テキストを最小限にして必要な情報がわかりやすく届け、背景の縁を少し濃ゆくすることで奥行きがでるようにデザインしました。</dd>
+                                テキストを最小限にして必要な情報がわかりやすく届け、背景の縁を少し濃くすることで奥行きがでるようにデザインしました。</dd>
                         </dl>
                     </div>
                 </div>
