--- a/works/work-website_02.html
+++ b/works/work-website_02.html
@@ -116,10 +116,13 @@
                         </div>
                     </div>
                     <div class="work__desc">
-                        <!-- <dl>
+                        <dl>
                             <dt>URL</dt>
-                            <dd><a href="https://tomoka1030.github.io/DESIGNCAFE/"></a></dd>
-                        </dl> -->
+                            <dd>
+                                <a href="https://tomoka1030.github.io/DESIGNCAFE/" target="_blank"
+                                    rel="norefferrer">https://tomoka1030.github.io/DESIGNCAFE/</a>
+                            </dd>
+                        </dl>
                         <dl>
                             <dt>担当範囲</dt>
                             <dd>コーディング</dd>
