--- a/works/work-website_01.html
+++ b/works/work-website_01.html
@@ -116,13 +116,16 @@
                             </div>
                         </div>
                         <div class="work__desc">
-                            <!-- <dl>
+                            <dl>
                                 <dt>URL</dt>
-                                <dd>xxxxxxxxxxxxxx</dd>
-                            </dl> -->
+                                <dd>
+                                    <a href="https://tomoka1030.github.io/Life-hair-design/" target="_blank"
+                                        rel="norefferrer">https://tomoka1030.github.io/DESIGNCAFE/</a>
+                                </dd>
+                            </dl>
                             <dl>
                                 <dt>担当範囲</dt>
-                                <dd>デザイン</dd>
+                                <dd>デザイン・コーディング</dd>
                             </dl>
                             <dl>
                                 <dt>使用ツール</dt>
@@ -137,7 +140,10 @@
                                 <dd>20代〜50代女性</dd>
                             </dl>
                             <dl>
-                                <dt>デザイン</dt>
+                                <dt class="multiLine">
+                                    <span class="top">デザイン</span>
+                                    <span class="bottom">コーディング</span>
+                                </dt>
                                 <dd>ロゴのピンクを基調にし、「LifestyleFit」の<br class="spOnly">コンセプトに合うよう、柔らかいイメージで作成しました。<br
                                         class="spOnly">予約につなげるための視線誘導や、キッズスペースやユニバーサルデザインといった差別化できる要素をわかりやすくデザインするよう心がけました。
                                 </dd>
