--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     <p class="caption">
                                         <span class="title">美容室のLP制作</span>
                                         <span class="subtitle">LIFE hair design</span>
-                                        <span class="text">担当:デザイン</span>
+                                        <span class="text">担当:デザイン・コーディング</span>
                                     </p>
                                 </div>
                             </a>
