--- a/works/work-website_01.html
+++ b/works/work-website_01.html
@@ -120,7 +120,7 @@
                                 <dt>URL</dt>
                                 <dd>
                                     <a href="https://tomoka1030.github.io/Life-hair-design/" target="_blank"
-                                        rel="norefferrer">https://tomoka1030.github.io/DESIGNCAFE/</a>
+                                        rel="norefferrer">https://tomoka1030.github.io/Life-hair-design/</a>
                                 </dd>
                             </dl>
                             <dl>
