--- a/thanks.html
+++ b/thanks.html
@@ -77,7 +77,7 @@
                         </a>
                     </li>
                     <li class="header__item">
-                        <a class="header__sns" href="https://www.instagram.com/tomo_design24/" target="_blank">
+                        <a class="header__sns" href="" target="_blank">
                             <img src="images/img_instagram.png" alt="インスタグラム">
                         </a>
                     </li>
@@ -108,7 +108,7 @@
 
             <div class="sns">
                 <!-- <div class="sns__img"> -->
-                <a class="sns__img" href="https://www.instagram.com/tomo_design24/" target="_blank">
+                <a class="sns__img" href="" target="_blank">
                     <img src="images/img_instagram.png" alt="インスタグラム">
                 </a>
                 <!-- </div> -->
@@ -172,7 +172,7 @@
                             </a>
                         </li>
                         <li class="footer__item">
-                            <a class="footer__sns" href="https://www.instagram.com/tomo_design24/" target="_blank">
+                            <a class="footer__sns" href="" target="_blank">
                                 <img src="images/img_instagram.png" alt="インスタグラム">
                             </a>
                         </li>
