--- a/works/work-flyer_01.html
+++ b/works/work-flyer_01.html
@@ -134,8 +134,7 @@
                         </dl>
                         <dl>
                             <dt>ターゲット</dt>
-                            <dd>20代〜50代女性<br>
-                                春の新生活時期に合わせて化粧品の新調を考えている</dd>
+                            <dd>20代〜50代女性</dd>
                         </dl>
                         <dl>
                             <dt>デザイン</dt>
